// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`StatusBar renders correctly when connected 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ [Connected] Chats                                                           ↑↓ move · Enter open │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`StatusBar renders correctly when connecting 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ [Connecting...] Chats                                                       ↑↓ move · Enter open │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`StatusBar renders correctly when disconnected 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ [Disconnected] Chats                                                        ↑↓ move · Enter open │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`StatusBar renders with different focused panels 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ [Connected] Messages                                                 r react · R reply · ← chats │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;
